...
                    .read<MarkDetailBloc>()
                    .add(const MarkDetailDismissPressed()),
                child: const Text('キャンセル'),
              ),
              const SizedBox(width: 16),
              ElevatedButton(
                key: const Key('markDetail_button_save'),
                onPressed: isSaving
                    ? null
                    : () => context
                        .read<MarkDetailBloc>()
                        .add(const MarkDetailSaveTapped()),
                child: isSaving
...
